--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Fund raising -- Juvenile fiction'
 - !lcsh 'Camp Fire Girls -- Juvenile fiction'
 - !lcsh 'Girls -- Societies and clubs -- Juvenile fiction'
+- GITenberg
 title: The Campfire Girls of Roselawn; Or, a Strange Message from the Air
 url: http://www.gutenberg.org/ebooks/28448
